--- a/templates/setting.html
+++ b/templates/setting.html
@@ -25,8 +25,8 @@
 
             <div class="container m-auto"> 
 
-                <h1 class="text-2xl leading-none text-gray-900 tracking-tight mt-3"> Account Setting </h1>
-                <ul class="mt-5 -mr-3 flex-nowrap lg:overflow-hidden overflow-x-scroll uk-tab">
+                <h1 class="text-2xl leading-none text-gray-900 tracking-tight mt-3"> <a href = "/"> Home</a> / Account settings for <b> {{user.username}}</b></h1>
+                <!-- <ul class="mt-5 -mr-3 flex-nowrap lg:overflow-hidden overflow-x-scroll uk-tab">
                     <li class="uk-active"><a href="#">General</a></li>
                     <li><a href="#">Profile</a></li>
                     <li><a href="#">Privacy</a></li>
@@ -34,37 +34,34 @@
                     <li><a href="#">Social links</a></li>
                     <li><a href="#">Billing</a></li>
                     <li><a href="#">Security</a></li>
-                </ul>
+                </ul> -->
+
+                <br>
+                <hr>
 
                 <div class="grid lg:grid-cols-3 mt-12 gap-8">
                     <div>
-                        <h3 class="text-xl mb-2"> Basic</h3>
+                        <h3 class="text-xl mb-2"> General </h3>
                         <p></p>
                     </div>
                     <div class="bg-white rounded-md lg:shadow-lg shadow col-span-2">
-    
+                    <form action = "" method="POST" enctype="multipart/form-data">
+                        {% csrf_token %}
                        <div class="grid grid-cols-2 gap-3 lg:p-6 p-4">
-                           <div>
-                               <label for=""> First name</label>
-                               <input type="text" placeholder="Your name.." class="shadow-none bg-gray-100">
-                           </div>
-                           <div>
-                               <label for=""> Last name</label>
-                               <input type="text" placeholder="Your name.." class="shadow-none bg-gray-100">
-                            </div>
+                        <div class="col-span-2">
+                            <label for=""> Profile image</label>
+                            <img width = "100" height = "100" src = "{{user_profile.profile_img.url}}" />
+                            <input type="file" name = 'image' value=" " class="shadow-none bg-gray-100">
+                        </div>
                             <div class="col-span-2">
-                                <label for=""> Email</label>
-                                <input type="text" placeholder="Your name.." class="shadow-none bg-gray-100">
-                            </div>
-                            <div class="col-span-2">
-                                <label for="about">About me</label>  
-                                <textarea id="about" name="about" rows="3"  class="shadow-none bg-gray-100"></textarea>
+                                <label for="about">Bio</label>  
+                                <textarea id="about" name="bio" rows="3"  class="shadow-none bg-gray-100"> {{user_profile.bio}}</textarea>
                             </div> 
                             <div class="col-span-2">
                                 <label for=""> Location</label>
-                                <input type="text" placeholder="" class="shadow-none bg-gray-100">
+                                <input type="text" name = 'location' value="{{user_profile.location}}" class="shadow-none bg-gray-100">
                             </div>
-                            <div>
+                            <!-- <div>
                                <label for=""> Working at</label>
                                <input type="text" placeholder="" class="shadow-none bg-gray-100">
                             </div> 
@@ -77,17 +74,17 @@
                                 <option value="3">Married</option>
                                 <option value="4">Engaged</option>
                               </select>
-                            </div>
+                            </div> -->
                        </div> 
     
                        <div class="bg-gray-10 p-6 pt-0 flex justify-end space-x-3">
-                           <button class="p-2 px-4 rounded bg-gray-50 text-red-500"> Cancel </button>
-                           <button type="button" class="button bg-blue-700"> Save </button>
+                           <button class="p-2 px-4 rounded bg-gray-50 text-red-500"> <a href ="/" > Cancel </a></button>
+                           <button type="submit" class="button bg-blue-700"> Save </button>
                        </div>
-    
+                    </form>
                     </div>
 
-                    <div>
+                    <!-- <div>
                         <h3 class="text-xl mb-2"> Privacy</h3>
                         <p> </p>
                     </div>
@@ -141,7 +138,7 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
     
                     </div>
                     <br>
@@ -166,7 +163,7 @@
     <script src="{% static 'assets/js/custom.js' %}"></script>
 
 
-    <script src="{% static '../../unpkg.com/ionicons%405.2.3/dist/ionicons.js' %}"></script>
+    <script src="https://unpkg.com/ionicons@5.2.3/dist/ionicons.js"></script>
 </body>
 
 </html>
