--- a/templates/index.html
+++ b/templates/index.html
@@ -205,12 +205,12 @@
                             <!-- post header-->
                             <div class="flex justify-between items-center px-4 py-3">
                                 <div class="flex flex-1 items-center space-x-4">
-                                    <a href="#">
+                                    <!-- <a href="#">
                                         <div class="bg-gradient-to-tr from-yellow-600 to-pink-600 p-0.5 rounded-full">  
                                             <img src="{% static 'assets/images/avatars/avatar-2.jpg' %}" class="bg-gray-200 border border-white rounded-full w-8 h-8">
                                         </div>
-                                    </a>
-                                    <span class="block capitalize font-semibold "> <a href="#"> {{posts.user}}</a> </span>
+                                    </a> -->
+                                    <span class="block capitalize font-semibold "> <a href="{% url 'profile' pk=posts %}"> @{{posts.user}}</a> </span>
                                 </div>
                               <div>
                                 <a href="#"> <i class="icon-feather-more-horizontal text-2xl hover:bg-gray-200 rounded-full p-2 transition -mr-1 "></i> </a>
@@ -305,7 +305,7 @@
                                 </div> -->
 
                                 <p>
-                                    <a href="#"> <strong>{{posts.user}} </strong> </a>{{posts.caption}}
+                                    <a href="{% url 'profile' pk=posts %}"> <strong>{{posts.user}} </strong> </a>{{posts.caption}}
                                 </p>
 
                                 <!-- <div class="border-t pt-4 space-y-4 ">
