--- a/templates/index.html
+++ b/templates/index.html
@@ -150,6 +150,73 @@
                             <a href="#" class="see-all">See all</a>
                         </div> -->
 
+                        <style>
+                            .notification-item {
+                                display: flex;
+                                align-items: center;
+                                padding: 8px; /* Adjust as needed */
+                            }
+                        
+                            .drop_avatar {
+                                margin-right: 10px; /* Adjust as needed */
+                                align-self: flex-start;
+                            }
+                        
+                            .drop_content {
+                                flex-grow: 1;
+                            }
+                        </style>
+                        
+                        <a href="#" class="header-links-item" id="notifications-icon">
+                            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24"><g fill="none"><path d="M12 22a2.02 2.02 0 0 1-2.01-2h4a2.02 2.02 0 0 1-.15.78a2.042 2.042 0 0 1-1.44 1.18h-.047A1.922 1.922 0 0 1 12 22zm8-3H4v-2l2-1v-5.5a8.065 8.065 0 0 1 .924-4.06A4.654 4.654 0 0 1 10 4.18V2h4v2.18c2.579.614 4 2.858 4 6.32V16l2 1v2z" fill="currentColor"/></g></svg>
+                        </a>
+                        <div uk-drop="mode: click;offset: 4" class="header_dropdown" id="notifications-dropdown">
+                            <h4 class="-mt-5 -mx-5 bg-gradient-to-t from-gray-100 to-gray-50 border-b font-bold px-6 py-3">
+                                Notification
+                            </h4>
+                            <ul class="dropdown_scrollbar" data-simplebar>
+                                <!-- Notifications will be added dynamically here -->
+                            </ul>
+                            <!-- <a href="#" class="see-all">See all</a> -->
+                        </div>
+                        
+                        <script>
+                            document.getElementById('notifications-icon').addEventListener('click', function(event) {
+                                event.preventDefault(); // Prevent the default behavior of the link
+                                var xhr = new XMLHttpRequest();
+                                xhr.open('GET', '{% url "notifications" %}');
+                                xhr.onload = function() {
+                                    if (xhr.status === 200) {
+                                        var notifications = JSON.parse(xhr.responseText).notifications;
+                                        var dropdownContent = document.querySelector('#notifications-dropdown .dropdown_scrollbar');
+                                        dropdownContent.innerHTML = ''; // Clear existing content
+                                        notifications.forEach(function(notification) {
+                                            dropdownContent.innerHTML += `
+                                                <li class="notification-item">
+                                                    <a href="#">
+                                                        <div class="drop_avatar" style="width: 45px; height: 45px;"> <!-- Adjust size here -->
+                                                            <img src="${notification.profile_picture}" alt="" style="width: 100%; height: 100%; object-fit: cover;">
+                                                        </div>
+                                                        <div class="drop_content">
+                                                            <p>
+                                                                <strong class="text-link">${notification.sender}</strong>
+                                                                <span class="text-link"> Liked your post </span>
+                                                            </p>
+                                                            <span class="time-ago">${notification.date_time}</span>
+                                                        </div>
+                                                    </a>
+                                                </li>
+                                            `;
+                                        });
+                                    } else {
+                                        console.error('Request failed: ' + xhr.status);
+                                    }
+                                };
+                                xhr.send();
+                            });
+                        </script>
+                        
+
                         <!-- Messages -->
 
                         <!-- <a href="#" class="header-links-item">
