adjusted the width problem of images in news feed

--- a/templates/index.html
+++ b/templates/index.html
@@ -304,7 +304,7 @@
     
                             <div uk-lightbox>
                                 <a href="{{posts.image.url}}">  
-                                    <img src="{{posts.image.url}}" alt="">
+                                    <img src="{{posts.image.url}}" alt="" class="w-full h-auto">
                                 </a>
                             </div>
                             
